Fix T39974: Popups lead to crash if 'UNDO' isn't set

This isn't supported, raise an error instead